# api-gateway-service

./: .dockerignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
configs/prometheus/: config.yml
grafana/pics/: queries.md
helm/: Chart.yaml
helm/templates/: _helpers.tpl
helm/values/: test.yaml
kuzora-api-gateway/: values.yaml
kuzora-api-gateway/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
kuzora-api-gateway/templates/tests/: test-connection.yaml
manifests/: configMap.yml  deployment.yml  service.yml
src/app/: service.py
src/app/api/: handlers.py  models.py  routes.py
src/app/api/healthz/: handlers.py
src/app/metrics/: tracing.py
src/app/system/: __init__.py  errors.py
src/config/: config-compose.yml  config-kube.yml  config-local.yml  config.py
src/tests/unit/: conftest.py
src/tests/unit/api/: test_handlers.py
src/tests/unit/api/healthz/: __init__.py  test_handlers.py
